--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+<h1>Расписание</h1>
+<div id="SiteWidgetMoyklass89142"></div>
 
+</body>
+<!-- MoyKlass widget begin -->
+<script src="https://app.moyklass.com/api/site/widget/?id=01DV8ike05l0L3hgDDBuo8YToDlQspuU6gmX" type="text/javascript" charset="UTF-8"></script>
+<!-- MoyKlass widget end -->
+</html>
