--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
 <title>Page Title</title>
 </head>
 <body>
+  
 <h1>Расписание</h1>
 <div id="SiteWidgetMoyklass89142"></div>
 
+<h1>Форма</h1>
+<div id="SiteWidgetMoyklass97720"></div>
+
 </body>
+<!-- Расписание -->
 <!-- MoyKlass widget begin -->
 <script src="https://app.moyklass.com/api/site/widget/?id=01DV8ike05l0L3hgDDBuo8YToDlQspuU6gmX" type="text/javascript" charset="UTF-8"></script>
+<!-- MoyKlass widget end -->
+
+<!-- Форма -->
+<!-- MoyKlass widget begin -->
+<script src="https://app.moyklass.com/api/site/widget/?id=014wuOlGRPNNoUdIzBahNzMqmXJIH3Bfrteh" type="text/javascript" charset="UTF-8"></script>
 <!-- MoyKlass widget end -->
 </html>
