--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <h1>Форма</h1>
 <div id="SiteWidgetMoyklass97720"></div>
 
+<h1>Форма - кнопка</h1>
+<div id="SiteWidgetMoyklass104243"></div>
 </body>
 <!-- Расписание -->
 <!-- MoyKlass widget begin -->
@@ -20,5 +22,10 @@
 <!-- Форма -->
 <!-- MoyKlass widget begin -->
 <script src="https://app.moyklass.com/api/site/widget/?id=014wuOlGRPNNoUdIzBahNzMqmXJIH3Bfrteh" type="text/javascript" charset="UTF-8"></script>
+<!-- MoyKlass widget end -->
+
+<!-- Форма-кнопка -->
+<!-- MoyKlass widget begin -->
+<script src="https://app.moyklass.com/api/site/widget/?id=0182QWJsIEIJuEdVrKpH5mzzM3GoHB3fkPex" type="text/javascript" charset="UTF-8"></script>
 <!-- MoyKlass widget end -->
 </html>
