--- a/index.html
+++ b/index.html
@@ -3,29 +3,40 @@
 <head>
 <title>Page Title</title>
 </head>
+
 <body>
   
-<h1>Расписание</h1>
-<div id="SiteWidgetMoyklass89142"></div>
+  <h1>Расписание</h1>
+  <div id="SiteWidgetMoyklass89142"></div>
 
-<h1>Форма</h1>
-<div id="SiteWidgetMoyklass97720"></div>
+  <h1>Форма</h1>
+  <div id="SiteWidgetMoyklass97720"></div>
 
-<h1>Форма - кнопка</h1>
-<div id="SiteWidgetMoyklass104243"></div>
+  <h1>Форма - кнопка</h1>
+  <div id="SiteWidgetMoyklass104243"></div>
+
+  <h1>Форма на существующую кнопку</h1>
+  <div id="SiteWidgetMoyklass104244"></div>
+  <button onclick="WdgMoyklass['01Jw5vB1IJenbFQNuGfuu9jeMGAT72c5tuD2'].loadFormByModal();">Существующая кнопка</button>
 </body>
-<!-- Расписание -->
-<!-- MoyKlass widget begin -->
-<script src="https://app.moyklass.com/api/site/widget/?id=01DV8ike05l0L3hgDDBuo8YToDlQspuU6gmX" type="text/javascript" charset="UTF-8"></script>
-<!-- MoyKlass widget end -->
+  
+  <!-- Расписание -->
+  <!-- MoyKlass widget begin -->
+  <script src="https://app.moyklass.com/api/site/widget/?id=01DV8ike05l0L3hgDDBuo8YToDlQspuU6gmX" type="text/javascript" charset="UTF-8"></script>
+  <!-- MoyKlass widget end -->
 
-<!-- Форма -->
-<!-- MoyKlass widget begin -->
-<script src="https://app.moyklass.com/api/site/widget/?id=014wuOlGRPNNoUdIzBahNzMqmXJIH3Bfrteh" type="text/javascript" charset="UTF-8"></script>
-<!-- MoyKlass widget end -->
+  <!-- Форма -->
+  <!-- MoyKlass widget begin -->
+  <script src="https://app.moyklass.com/api/site/widget/?id=014wuOlGRPNNoUdIzBahNzMqmXJIH3Bfrteh" type="text/javascript" charset="UTF-8"></script>
+  <!-- MoyKlass widget end -->
 
-<!-- Форма-кнопка -->
-<!-- MoyKlass widget begin -->
-<script src="https://app.moyklass.com/api/site/widget/?id=0182QWJsIEIJuEdVrKpH5mzzM3GoHB3fkPex" type="text/javascript" charset="UTF-8"></script>
-<!-- MoyKlass widget end -->
+  <!-- Форма-кнопка -->
+  <!-- MoyKlass widget begin -->
+  <script src="https://app.moyklass.com/api/site/widget/?id=0182QWJsIEIJuEdVrKpH5mzzM3GoHB3fkPex" type="text/javascript" charset="UTF-8"></script>
+  <!-- MoyKlass widget end -->
+
+  <!-- Форма на существующую кнопку -->
+  <!-- MoyKlass widget begin -->
+  <script src="https://app.moyklass.com/api/site/widget/?id=01Jw5vB1IJenbFQNuGfuu9jeMGAT72c5tuD2" type="text/javascript" charset="UTF-8"></script>
+  <!-- MoyKlass widget end -->
 </html>
