--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
   <h1>Форма на существующую кнопку</h1>
   <div id="SiteWidgetMoyklass104244"></div>
   <button onclick="WdgMoyklass['01Jw5vB1IJenbFQNuGfuu9jeMGAT72c5tuD2'].loadFormByModal();">Существующая кнопка</button>
+
+
+  <h1>Форма для лидов</h1>
+  <div id="SiteWidgetMoyklass104246"></div>
 </body>
   
   <!-- Расписание -->
@@ -38,5 +42,10 @@
   <!-- Форма на существующую кнопку -->
   <!-- MoyKlass widget begin -->
   <script src="https://app.moyklass.com/api/site/widget/?id=01Jw5vB1IJenbFQNuGfuu9jeMGAT72c5tuD2" type="text/javascript" charset="UTF-8"></script>
+  <!-- MoyKlass widget end -->
+
+  <!-- Форма для лидов -->
+  <!-- MoyKlass widget begin -->
+  <script src="https://app.moyklass.com/api/site/widget/?id=01sE5RMa1qr2puIKAbNXAVEumNumipGWFomu" type="text/javascript" charset="UTF-8"></script>
   <!-- MoyKlass widget end -->
 </html>
